--- a/public/assets/scss/header/_header.scss
+++ b/public/assets/scss/header/_header.scss
@@ -1,5 +1,5 @@
 /*=====================
-    Header Area 
+    Header Area
 =======================*/
 
 .header-area{
@@ -115,7 +115,7 @@
         }
     }
 
-    // Static Header 
+    // Static Header
     &.header--static{
         padding: 0 50px;
         .header-wrapper {
@@ -132,7 +132,7 @@
         }
     }
 
-    // Header Fixed 
+    // Header Fixed
     &.header--fixed {
         position: absolute;
         top: 0;
@@ -142,7 +142,7 @@
         width: 100%;
         background: transparent;
         transition: 0.3s;
-        
+
         @media #{$lg-layout} {
             padding-left: 30px;
             padding-right: 30px;
@@ -192,7 +192,7 @@
                                     height: 3px;
                                     background: $theme-color;
                                     transition: 0.3s;
-                                    bottom: 0;
+                                    bottom: -5px;
                                 }
                             }
                             &.is-current {
@@ -272,7 +272,7 @@
             }
         }
     }
-    
+
     &.color-black {
         .humberger-menu {
             span {
@@ -303,7 +303,7 @@
 
 
 /*-----------------------------
-    MObile Menu Style Css 
+    MObile Menu Style Css
 -------------------------------*/
 
 .header-area {
@@ -347,8 +347,8 @@
                         display: block;
                         overflow-y: auto;
                     }
-                    
-                    li { 
+
+                    li {
                         @media #{$md-layout} {
                             margin: 0;
                             padding: 10px 0;
@@ -359,10 +359,10 @@
                         }
                         &.has-droupdown{
                             @media #{$md-layout} {
-                                position: relative;   
+                                position: relative;
                             }
                             @media #{$sm-layout} {
-                                position: relative;   
+                                position: relative;
                             }
                             > a {
                                 @media #{$sm-layout} {
@@ -389,7 +389,7 @@
                                             border-width: 0 7px 7px 7px;
                                             border-color: transparent transparent $theme-color transparent;
                                         }
-                                    }  
+                                    }
                                 }
                                 @media #{$md-layout} {
                                     position: relative;
@@ -415,7 +415,7 @@
                                             border-width: 0 7px 7px 7px;
                                             border-color: transparent transparent $theme-color transparent;
                                         }
-                                    }  
+                                    }
                                 }
                             }
                         }
@@ -440,7 +440,7 @@
                                     visibility: hidden;
                                     background: transparent;
                                     box-shadow: inherit;
-                                    
+
                                 }
                                 @media #{$sm-layout} {
                                     position: relative;
@@ -474,13 +474,13 @@
                                         padding: 12px 0;
                                         opacity: 1;
                                         visibility: visible;
-                                    } 
+                                    }
                                     @media #{$sm-layout} {
                                         height: 100%;
                                         padding: 12px 0;
                                         opacity: 1;
                                         visibility: visible;
-                                    } 
+                                    }
                                 }
                             }
                         }
@@ -588,7 +588,7 @@
 
 
 /*------------------------
-    Hamberger Menu  
+    Hamberger Menu
 ---------------------------*/
 .humberger-menu {
     span {
